# contextbtc

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  rpc.rs  tools.rs
src/: client.rs  main.rs  server.rs
