[package]
name = "context-btc-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
contextvm-sdk = { version = "0.2.0", features = ["rmcp"] }
rmcp = { version = "1.8.0", features = ["server", "client"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15.7"

