[workspace]
resolver = "2"
members = ["crates/server", "crates/client"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.103"
contextvm-sdk = { version = "0.2.0", features = ["rmcp"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
reqwest = { version = "0.12", features = ["json"] }
backon = "1.6.0"
