[package]
name = "context-btc-client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
contextvm-sdk.workspace = true
rmcp = { version = "1.8.0", features = ["client"] }
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
