[package]
name = "context-btc-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
contextvm-sdk.workspace = true
rmcp = { version = "1.8.0", features = ["server"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
backon.workspace = true
